@@ -1,4 +1,5 @@
 Version 2024.xxxxx (xxxxx 2024)
+- Implemented: Domoticz Remote Server, added better error message if remote domoticz device could not be created because accepting new devices is disabled under settings
 - Fixed: Alert sensor notification
 
 Version 2024.2 (January 15th 2024)
